NXP-25991: Cleanup / Format